<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageItemActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                    android:src="@drawable/barcode_scan_icon"
                    android:contentDescription="scan barcode button"
                    android:clickable="true"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/check_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/check_icon"
                    android:clickable="true"
                    app:tint="@color/white"
...
                    android:text="Item Name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="center_horizontal" />

                <EditText
                    android:id="@+id/item_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:hint="e.g. kitchen"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/serial_number_field"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="45dp"
                        android:hint="e.g. 1234RTL0916010001"
                        android:textSize="16sp"
                        android:inputType="textNoSuggestions"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <com.example.sweethome.CustomAddTagsField
                android:id="@+id/tag_input"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="new tag..."
                android:inputType="text"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="15dp">
                <LinearLayout
                    android:id="@+id/tags_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/description_field"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_height="100dp"
                android:layout_marginBottom="15dp"
                android:gravity="top"
...
                    android:text="Make"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="center_horizontal" />

                <EditText
                    android:id="@+id/make_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:hint="e.g. Google"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/model_field"
                        android:hint="e.g. pixel 8 pro"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:paddingHorizontal="8dp"
                        android:textSize="16sp"
                        android:inputType="textNoSuggestions"
...
                    android:text="Date of purchase"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/date_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:hint="YYYY-MM-DD"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/value_field"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="e.g. $1000"
                        android:maxLength="10"
                        android:paddingHorizontal="8dp"
                        android:textSize="16sp"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/comment_field"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="top"
                android:padding="8dp"
...
